# felman

./: .gitignore  LICENSE  flake.nix  main.py  pyproject.toml  readme.txt  result
src/fleman/: __init__.py  cli.py
src/fleman/encode/: __init__.py  subtitle.py
src/fleman/subtitles/: __init__.py  generator.py
src/fleman/transcribe/: __init__.py  groq.py
src/fleman/translate/: __init__.py  api.py
src/fleman/utils/: media.py
