[project]
name = "fleman"
version = "0.1.0"
description = "kao rou"
readme = "readme.txt"
requires-python = ">=3.12"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.5.0",
    "pysubs2>=1.6.0",
    "groq>=0.4.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
fleman = "fleman.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
